--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -48,4 +48,17 @@
         app:srcCompat="@drawable/ic_baseline_favorite_border"
         tools:ignore="ContentDescription" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/photoFabNotification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/FAB_margin"
+        android:layout_marginBottom="@dimen/FAB_margin"
+        android:elevation="@dimen/FAB_elevation"
+        app:backgroundTint="#CCCCCC"
+        app:layout_anchor="@id/photoNestedScrollView"
+        app:layout_anchorGravity="bottom|start"
+        app:srcCompat="@drawable/ic_baseline_notifications_off"
+        tools:ignore="ContentDescription" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
