8: добавлен README.md; чистка кода (удаление неиспользуемого кода, ресурсов, добавление комментариев и т.д.)

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
     <style name="Theme.FlickrRecent.Starting" parent="Theme.SplashScreen">
         <!-- The splash screen background, animated icon, and animation duration -->
         <item name="windowSplashScreenBackground">@drawable/background_splash</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo_splash</item>
         <item name="windowSplashScreenAnimationDuration">0</item>
         <item name="postSplashScreenTheme">@style/Theme.FlickrRecent</item>
     </style>
