--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,38 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemContainer"
     android:layout_width="@dimen/card_dimen"
-    android:layout_height="@dimen/card_dimen">
+    android:layout_height="@dimen/card_dimen"
+    android:elevation="@dimen/card_elevation"
+    app:cardCornerRadius="@dimen/card_corner_radius">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/itemContainer"
+    <ImageView
+        android:id="@+id/itemImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/card_margin"
-        android:elevation="@dimen/card_elevation"
-        app:cardCornerRadius="@dimen/card_corner_radius">
-
-        <ImageView
-            android:id="@+id/itemImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            tools:ignore="ContentDescription" />
-
-    </androidx.cardview.widget.CardView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/itemFabDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/FAB_margin"
-        android:layout_marginBottom="@dimen/FAB_margin"
-        android:elevation="@dimen/FAB_elevation"
-        app:backgroundTint="#CCCCCC"
-        app:layout_anchor="@id/itemContainer"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_baseline_delete"
         tools:ignore="ContentDescription" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/itemButtonDelete"
+        android:layout_width="@dimen/delete_button_dimen"
+        android:layout_height="@dimen/delete_button_dimen"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="@dimen/card_margin"
+        android:layout_marginEnd="@dimen/card_margin"
+        android:background="@color/white"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_close"
+        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />
+
+</androidx.cardview.widget.CardView>
